--- a/src/components/ResponsesList.css
+++ b/src/components/ResponsesList.css
@@ -5,3 +5,9 @@
     max-height: 100%;
     overflow-y: scroll;
 }
+
+@media only screen and (max-width: 768px) {
+    .ResponsesList {
+        overflow-y: visible;
+    }
+  }
